<resources>
    <string name="app_name">SimplestCalculator</string>
    <string name="b_00_text">C</string>
    <string name="b_01_text">+</string>
    <string name="b_02_text">-</string>
    <string name="b_03_text">*</string>
    <string name="b_10_text">7</string>
    <string name="b_11_text">8</string>
    <string name="b_12_text">9</string>
    <string name="b_13_text">/</string>
    <string name="b_20_text">4</string>
    <string name="b_21_text">5</string>
    <string name="b_22_text">6</string>
    <string name="b_23_text">=</string>
    <string name="b_30_text">1</string>
    <string name="b_31_text">2</string>
    <string name="b_32_text">3</string>
    <string name="b_33_text">0</string>
    <string name="tv2_initial_text">0</string>
</resources>
