<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_closed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/tv_operator_placement"
            android:padding="10dp"

            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <TextView
        android:text="@string/tv2_initial_text"

        android:id="@+id/tv_button_editable_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_00"
            android:text="@string/b_00_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_01"
            android:text="@string/b_01_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_02"
            android:text="@string/b_02_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_03"
            android:text="@string/b_03_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_10"
            android:text="@string/b_10_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_11"
            android:text="@string/b_11_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_12"
            android:text="@string/b_12_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_13"
            android:text="@string/b_13_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_20"
            android:text="@string/b_20_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_21"
            android:text="@string/b_21_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_22"
            android:text="@string/b_22_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_23"
            android:text="@string/b_23_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_30"
            android:text="@string/b_30_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_31"
            android:text="@string/b_31_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_32"
            android:text="@string/b_32_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_33"
            android:text="@string/b_33_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>



</LinearLayout>